adds fabric ai stuff, qa, math, notebooks

--- a/lib/resolvinator_web/components/layouts/root.html.heex
+++ b/lib/resolvinator_web/components/layouts/root.html.heex
@@ -10,6 +10,8 @@
     <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
     </script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.8/dist/katex.min.css" />
+
     <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/@needle-tools/engine/dist/needle-engine.light.min.js"></script>
