--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -26,3 +26,18 @@
 @import "../../node_modules/katex/dist/katex.css";
 
 /* Your other styles */
+
+/* Add these styles if not already present */
+[data-modal] {
+  position: fixed;
+  inset: 0;
+  z-index: 50;
+}
+
+[data-modal]:not(.hidden) {
+  display: block;
+}
+
+[data-modal] [role="dialog"] {
+  z-index: 50;
+}
