a detailed commit message

--- a/lib/resolvinator_web/live/topic_live/form_component.html.heex
+++ b/lib/resolvinator_web/live/topic_live/form_component.html.heex
@@ -17,9 +17,9 @@
         </div>
 
         <div class="form-control">
-          <%= label f, :desc, class: "label" %>
-          <%= textarea f, :desc, class: "textarea textarea-bordered h-24" %>
-          <%= error_tag f, :desc %>
+          <%= label f, :description, class: "label" %>
+          <%= textarea f, :description, class: "textarea textarea-bordered h-24" %>
+          <%= error_tag f, :description %>
         </div>
 
         <div class="form-control">
