--- a/lib/resolvinator_web/live/project_live/index.html.heex
+++ b/lib/resolvinator_web/live/project_live/index.html.heex
@@ -9,30 +9,83 @@
 
 <.table
   id="projects"
-  rows={@streams.projects}
-  row_click={fn {_id, project} -> JS.navigate(~p"/projects/#{project}") end}
+  rows={@projects}
+  row_click={fn project -> JS.navigate(~p"/projects/#{project}") end}
 >
-  <:col :let={{_id, project}} label="Name"><%= project.name %></:col>
-  <:col :let={{_id, project}} label="Description"><%= project.description %></:col>
-  <:col :let={{_id, project}} label="Status"><%= project.status %></:col>
-  <:col :let={{_id, project}} label="Risk appetite"><%= project.risk_appetite %></:col>
-  <:col :let={{_id, project}} label="Start date"><%= project.start_date %></:col>
-  <:col :let={{_id, project}} label="Target date"><%= project.target_date %></:col>
-  <:col :let={{_id, project}} label="Completion date"><%= project.completion_date %></:col>
-  <:col :let={{_id, project}} label="Settings"><%= project.settings %></:col>
-  <:action :let={{_id, project}}>
-    <div class="sr-only">
-      <.link navigate={~p"/projects/#{project}"}>Show</.link>
-    </div>
-    <.link patch={~p"/projects/#{project}/edit"}>Edit</.link>
+  <:col :let={project} label="Name"><%= project.name %></:col>
+  <:col :let={project} label="Description"><%= project.description %></:col>
+  <:col :let={project} label="Status"><%= project.status %></:col>
+  <:col :let={project} label="Risk appetite"><%= project.risk_appetite %></:col>
+  <:col :let={project} label="Owner">
+    <%= if project.creator do %>
+      <%= project.creator.email %>
+      <%= if project.creator_id == @current_user_id do %>
+        <span class="text-sm text-gray-500">(You)</span>
+      <% end %>
+    <% else %>
+      <span class="text-sm text-gray-500">Unclaimed</span>
+    <% end %>
+  </:col>
+  <:action :let={project}>
+    <%= cond do %>
+      <% project.creator_id == @current_user_id -> %>
+        <div class="flex space-x-2">
+          <.link patch={~p"/projects/#{project}/edit"}>Edit</.link>
+          <.link
+            phx-click={JS.push("generate-token", value: %{id: project.id})}
+            class="text-blue-600 hover:text-blue-700"
+          >
+            Generate Token
+          </.link>
+        </div>
+      <% is_nil(project.creator_id) -> %>
+        <.link
+          phx-click={JS.push("show-claim-form", value: %{id: project.id})}
+          class="text-blue-600 hover:text-blue-700"
+        >
+          Claim
+        </.link>
+        <%= if @claiming_project_id == project.id do %>
+          <div class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center">
+            <div class="bg-white p-6 rounded-lg shadow-xl max-w-md w-full">
+              <h3 class="text-lg font-semibold mb-4">Enter Ownership Token</h3>
+              <div class="mb-4">
+                <input
+                  type="text"
+                  value={@token_input}
+                  phx-keyup="update-token-input"
+                  class="w-full px-3 py-2 border rounded"
+                  placeholder="Enter token..."
+                />
+              </div>
+              <div class="flex justify-end space-x-2">
+                <.button
+                  phx-click="hide-claim-form"
+                  class="bg-gray-300 hover:bg-gray-400"
+                >
+                  Cancel
+                </.button>
+                <.button
+                  phx-click={JS.push("claim-with-token", value: %{id: project.id})}
+                  class="bg-blue-600 hover:bg-blue-700"
+                >
+                  Claim Project
+                </.button>
+              </div>
+            </div>
+          </div>
+        <% end %>
+    <% end %>
   </:action>
-  <:action :let={{id, project}}>
-    <.link
-      phx-click={JS.push("delete", value: %{id: project.id}) |> hide("##{id}")}
-      data-confirm="Are you sure?"
-    >
-      Delete
-    </.link>
+  <:action :let={project}>
+    <%= if project.creator_id == @current_user_id do %>
+      <.link
+        phx-click={JS.push("delete", value: %{id: project.id}) |> hide("##{project.id}")}
+        data-confirm="Are you sure?"
+      >
+        Delete
+      </.link>
+    <% end %>
   </:action>
 </.table>
 
@@ -43,6 +96,7 @@
     title={@page_title}
     action={@live_action}
     project={@project}
+    current_user_id={@current_user_id}
     patch={~p"/projects"}
   />
 </.modal>
